--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,10 @@ h6 {
 
 /* BotPress */
 
+.botcss{
+  background-size: 100% 100%;
+}
+
 /* header*/
 .bpw-header-container {
   background: url(images/header.png) no-repeat;
