--- a/assets/css/kennethstyle.css
+++ b/assets/css/kennethstyle.css
@@ -375,30 +375,18 @@ h6 {
   display: block;
 }
 
-/* TYPE WRITEr */
+
 
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
 .pink {
-  background-color: #F4CAE0;
-
-}
-
-.mainhero{
-  background-color: #FFFCFF;
-}
-
-.green {
   background-color: #E5FCF5;
-}
 
-.orange{
-  background-color: #FFC15E;
 }
 
 .kelly-1 {
-  background-color: #FFA9A3;
+  background-color: #CA9CE1;
 
 }
 
