--- a/botpress.css
+++ b/botpress.css
@@ -8,3 +8,14 @@
 .bot-css{
   height: 90%;
 }
+
+.bpw-button{
+  font-size: 10px;
+  border-radius: 5px;
+}
+
+.bpw-keyboard-single-choice{
+  background-color: #fff;
+  padding: 8px 20px;
+  border-top: 0px;
+}
