--- a/botpress.css
+++ b/botpress.css
@@ -11,11 +11,13 @@
 
 .bpw-button{
   font-size: 10px;
-  border-radius: 5px;
+  border-radius: 8px;
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 
 .bpw-keyboard-single-choice{
   background-color: #fff;
-  padding: 8px 20px;
+  padding-top: 0px;
   border-top: 0px;
 }
