--- a/botpress.css
+++ b/botpress.css
@@ -21,3 +21,11 @@
   padding-top: 0px;
   border-top: 0px;
 }
+
+.bpw-composer{
+  padding: 0px 0px;
+}
+
+.bpw-composer-inner{
+  padding: 0px 0px;
+}
