--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,51 @@ h6 {
   opacity: 1;
 }
 
+/* SCROLLING LOGOS AT HOME SCREEN */
+
+.slide img {
+  width: 140px;
+  height: 140px;
+  animation: scroll 60s linear infinite;
+}
+
+.slide-track {
+  width: 100%;
+  display: flex;
+  gap: 3em;
+  overflow: hidden;
+}
+
+.slider {
+  margin-bottom: 40px;
+  background-color: #FFFCFF;
+}
+
+@keyframes scroll {
+  0% {transform: translateX(0);}
+  100% {transform: translatex(-1000%)}
+}
+
+/* HOME WAVE AT HOME SCREEN */
+
+.animated-gradient {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 
 /*--------------------------------------------------------------
 # Disable aos animation delay on mobile devices
@@ -184,7 +229,9 @@ h6 {
 
 .navbar .getstarted,
 .navbar .getstarted:focus {
-  background: #022F6F;
+  background: #bc4e9c;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #f80759, #bc4e9c);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #f80759, #bc4e9c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #fff;
   padding: 12px 25px;
   margin-left: 30px;
@@ -195,7 +242,10 @@ h6 {
 
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
-  background: #748ec6;
+  background: #ff9966;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ff5e62, #ff9966);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ff5e62, #ff9966); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   color: #fff;
 }
 
@@ -385,9 +435,33 @@ h6 {
 
 }
 
-.mainhero{
+.mainhero {
+  background-image: url("../img/homebg.jpg");
+  background-size: cover;
+  background-position: right;
   background-color: #FFFCFF;
 }
+/*
+@media (max-width: 992px) {
+  .pricing .box {
+    max-width: 60%;
+    margin: 0 auto 30px auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .pricing .box {
+    max-width: 80%;
+    margin: 0 auto 30px auto;
+  }
+} */
+
+/* @media (max-width: 767px) {
+  .mainhero {
+    background-position: right;
+  }
+} */
+
 
 .green {
   background-color: #E5FCF5;
@@ -421,10 +495,10 @@ h6 {
   width: 100%;
   position: relative;
   overflow: hidden;
-  padding: 140px 0 100px 0;
+  padding: 140px 0 0 0;
 }
 
-#hero::before {
+/* #hero::before {
   content: "";
   position: absolute;
   right: -100%;
@@ -434,7 +508,7 @@ h6 {
   z-index: -1;
   background-color: #e8ecf5;
   transform: skewY(135deg);
-}
+} */
 
 #hero h1 {
   margin: 0 0 10px 0;
@@ -451,6 +525,14 @@ h6 {
   font-size: 20px;
 }
 
+.problemSection{
+  padding-top: 50px;
+}
+
+.smallText {
+  color: #F6085B;
+}
+
 .download-btn {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
@@ -463,6 +545,7 @@ h6 {
   background: #022F6F;
   position: relative;
 }
+
 
 .download-btn:hover {
   background: #47536e;
@@ -484,6 +567,54 @@ h6 {
 
 .download-btn+.download-btn {
   margin-left: 20px;
+}
+
+.trial-btn {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  display: inline-block;
+  padding: 8px 24px 10px 46px;
+  border-radius: 20px;
+  transition: 0.5s;
+  color: #fff;
+  background: #bc4e9c;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #f80759, #bc4e9c);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #f80759, #bc4e9c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  position: relative;
+}
+
+
+.trial-btn:hover {
+  background: #ff9966;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ff5e62, #ff9966);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ff5e62, #ff9966); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+}
+
+.trial-btn i {
+  font-size: 20px;
+  position: absolute;
+  left: 18px;
+  top: 4px;
+}
+
+.trial-btn-apple i {
+  font-size: 20px;
+  position: absolute;
+  left: 18px;
+  top: 8px;
+}
+
+.trial-btn+.trial-btn {
+  margin-left: 20px;
+}
+
+@media (max-width: 1400px) {
+  #hero h1 {
+    font-size: 40px;
+  }
 }
 
 @media (max-width: 991px) {
@@ -527,6 +658,79 @@ h6 {
   }
 }
 
+.margintopbig {
+  margin-top: 100px;
+}
+/* VIDEO SECTIOn *
+
+
+
+/*===== VIDEO ONE =====*/
+
+
+.video-one {
+  background-color: var(--light-2);
+  padding-top: 50px;
+  /* padding-bottom: 0px; */
+}
+.video-one .video-title h5 {
+  font-weight: 600;
+  color: var(--primary);
+}
+.video-one .video-title h2 {
+  font-weight: 700;
+  color: var(--black);
+  margin-top: 10px;
+}
+.video-one .video-title .text-lg {
+  margin-top: 24px;
+  color: var(--dark-3);
+}
+.video-one .video-content {
+  position: relative;
+  margin-top: 60px;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.video-one .video-content img {
+  border-radius: 8px;
+}
+.video-one .video-content a {
+  width: 88px;
+  height: 88px;
+  line-height: 88px;
+  text-align: center;
+  border-radius: 50%;
+  background-color: var(--primary);
+  color: var(--white);
+  font-size: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+  padding-left: 3px;
+}
+@media (max-width: 767px) {
+  .video-one .video-content a {
+    width: 68px;
+    height: 68px;
+    line-height: 68px;
+    font-size: 46px;
+  }
+}
+.video-one .video-content a:hover {
+  background-color: var(--white);
+  color: var(--primary);
+}
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
