updated all screenshots on main page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,9 @@ h6 {
   max-height: 40px;
 }
 
+.agency-logo {
+  width: 300px;
+}
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
