added pdf2anki whole app demo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -501,6 +501,10 @@ h6 {
   background-color: #43AA8B;
 }
 
+.dialoguifyfeature {
+  background-color: #A3C3D9;
+}
+
 .mainhero {
   background-image: url("../img/homebg.jpg");
   background-size: cover;
